--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -19,14 +19,14 @@
   .game-container {
     margin: 5px auto;
     width: 96%;
-    /* gap: max(20px, 2vw); */
+    /* gap: max(25px, 2vw); */
   }
 }
 
 @media (max-width: 550px) {
   .game-container {
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     width: 98%;
     margin: 10px auto;
   }
@@ -36,7 +36,6 @@
   width: min(80vw, 100%);
   max-width: 450px;
   min-width: 250px;
-  aspect-ratio: 1/1;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -53,7 +52,5 @@
 @media (max-width: 550px) {
   .board-container {
     width: 96%;
-    max-height: 450px;
-    aspect-ratio: 1/1;
   }
 }
